--- a/index.html
+++ b/index.html
@@ -3022,7 +3022,16 @@ blockquote {
          </div> 
          <div class="banner_wrapper"> 
          </div> 
-         
+         <div class="search_wrapper"> 
+          <!-- #searchform --> 
+          <form method="get" id="searchform" action="https://tourismsolomons.com/"> 
+           <i class="icon_search icon-search-fine"></i> 
+           <a href="https://tourismsolomons.com/#" class="icon_close"><i class="icon-cancel-fine"></i></a> 
+           <input type="text" class="field" name="s" placeholder="Enter your search" /> 
+           <input type="submit" class="submit" value="" style="display:none;" /> 
+          </form> 
+         </div> 
+        </div> 
         
        </div> 
       </div> 
