--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="apple-touch-icon" href="./Tourism_files/icon.png" /> 
   <!-- wp_head() --> 
   <!-- <script>!function(e,c){e[c]=e[c]+(e[c]&&" ")+"quform-js"}(document.documentElement,"className");</script> -->
-  <title>Solomon Islands Tourism</title> 
+  <title>Solomon Islands</title> 
   <script src="./Tourism_files/wp-emoji-release.min.js" type="text/javascript" defer=""></script> 
   <style type="text/css">
 img.wp-smiley,
@@ -3395,6 +3395,7 @@ A member of the The British Commonwealth of Nations. The capital Honiara.On Sept
       <div class="column one"> 
        <!-- <a id="back_to_top" class="button button_js" href="https://tourismsolomons.com/"><i class="icon-up-open-big"></i></a> --> 
        <!-- Copyrights --> 
+
        <div class="copyright">
          &copy; 2021 Solomon Islands E-RESIDENT. All Rights Reserved. 
        </div> 
@@ -3477,7 +3478,8 @@ A member of the The British Commonwealth of Nations. The capital Honiara.On Sept
   <!-- /.modal -->
 <script type="text/javascript">
 $("#loginBtn").click(function(){
-      $('#myModal').modal('show');
+     // $('#myModal').modal('show');
+     
 });
 
 </script>
